# quiksearch

./: Cargo.toml  readme.md
assets/: file_id.diz  test_list.txt
benches/: my_benchmark.rs
src/: lib.rs  main.rs
